# blog

./: 404.html  CNAME  README.md  config.toml  feed.xml  index.html  robots.txt  sitemap.xml
.github/workflows/: ci.yml  hugo.yml
archetypes/: default.md
authors/: index.html
authors/david.hausmann/: feed.xml  index.html
authors/hannes.winkler/: feed.xml  index.html
authors/julian.benda/: feed.xml  index.html
authors/kevin.kulot/: feed.xml  index.html
authors/michael.blesel/: feed.xml  index.html
authors/michael.kuhn/: feed.xml  index.html
authors/yolanda.thiel/: feed.xml  index.html
content/posts/2023/02/benchmarking/: benchmarking_the_world.tar  create_src_archive  google_micro.cpp  index.md  meson.build  monte_carlo.cpp  monte_carlo_results.md  simple_micro.cpp  sum.hpp
data/authors/: david.hausmann.yml  hannes.winkler.yml  janik.teune.yml  julian.benda.yml  kevin.kulot.yml  kira.duwe.yml  marvin.zein.yml  michael.blesel.yml  michael.kuhn.yml  philipp.david.yml  timm.erxleben.yml  yolanda.thiel.yml
data/menu/: extra.yml
layouts/shortcodes/: carousel.html  figures.html  goto.html
page/1/: index.html
page/2/: index.html
posts/: index.html
static/css/: carousel.css
tags/: index.html
tags/Clang/: feed.xml  index.html
tags/Compression/: feed.xml  index.html
tags/Correctness/: feed.xml  index.html
tags/EPEA-2021/: feed.xml  index.html
tags/Efficiency/: feed.xml  index.html
tags/LLVM/: feed.xml  index.html
tags/Libfabric/: feed.xml  index.html
tags/Message-Passing/: feed.xml  index.html
tags/Network-Communication/: feed.xml  (+1 more)
(+150 files in other folders)
